// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render a checkbox partially checked 1`] = `
<div
  className="ui-checkbox ui-checkbox--medium"
  data-test="ui-checkbox"
  name={undefined}
  style={
    Object {
      "alignContent": "flex-start",
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 0,
      "position": "relative",
    }
  }
>
  <input
    checked={false}
    disabled={false}
    id="checkbox3"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="checkbox3"
    onClick={undefined}
  >
    <div
      className="ui-checkbox__label-group"
    >
      <span
        className="ui-checkbox__label"
      >
        A checkbox label
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render a checkbox with label 1`] = `
<div
  className="ui-checkbox ui-checkbox--medium"
  data-test="ui-checkbox"
  name={undefined}
  style={
    Object {
      "alignContent": "flex-start",
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 0,
      "position": "relative",
    }
  }
>
  <input
    checked={true}
    disabled={false}
    id="checkbox2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="checkbox2"
    onClick={undefined}
  >
    <div
      className="ui-checkbox__label-group"
    >
      <span
        className="ui-checkbox__label"
      >
        A checkbox label
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render shallow component ok 1`] = `
<div
  className="ui-checkbox ui-checkbox--medium"
  data-test="ui-checkbox"
  name={undefined}
  style={
    Object {
      "alignContent": "flex-start",
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": 0,
      "position": "relative",
    }
  }
>
  <input
    checked={true}
    disabled={false}
    id="checkbox1"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="checkbox1"
    onClick={undefined}
  />
</div>
`;
